--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,20 @@
 @import "tailwindcss";
+.corner_left {
+  position: absolute;
+  top: 0;
+  color: black;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+}
+
+.corner_right {
+  position: absolute;
+  bottom: 0;
+  color: black;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+}
