project is completed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,19 @@
   width: 20px;
   height: 20px;
 }
+
+@media (max-width: 1300px) {
+  .text_less {
+    font-size: 60px;
+  }
+}
+@media (max-width: 1024px) {
+  .text_less {
+    font-size: 72px;
+  }
+}
+@media (max-width: 640px) {
+  .text_less {
+    font-size: 48px;
+  }
+}
