--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -1,19 +1,42 @@
+@media (max-width: 1400px) {
+  .nav_topInfo,
+  .nav_right_bottom,
+  .nav_right_bottom_all {
+    display: none;
+  }
+  .nav_mid_bottom {
+    height: 120px;
+    @apply pl-[0px];
+  }
+  .nav_mid_ul {
+    @apply justify-center;
+  }
+  .nav_right_lg {
+    display: block;
+  }
+  .navInfoAndQuota {
+    display: block;
 
-@media  (max-width: 1400px){
-    .nav_topInfo{
-        display: none;
-    }
+  }
 }
+
+@media (max-width: 1300px) {
+
+}
+@media (max-width: 1040px) {
+
+}
+
 @media (min-width: 768px) {
   .nav_left {
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 3% 100%, 0% 75%);
   }
-  .nav_right {
+  .nav_right,
+  .nav_right_bottom {
     clip-path: polygon(0% 0%, 90% 0%, 100% 25%, 100% 100%, 0% 100%);
   }
 }
-@media (min-width: 1440px) {
 
+@media (max-width: 640px) {
 
 }
-
