--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -14,11 +14,35 @@
     clip-path: polygon(0% 0%, 90% 0%, 100% 22%, 100% 100%, 0% 100%);
   }
 }
+@media (max-width: 1040px) {
+  .side_Menu {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 95% 100%, 0% 100%);
+  }
+
+}
+
+
+@media (max-width: 1040px) {
+  .side_Menu {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 95% 100%, 0% 100%);
+  }
+
+}
+@media (max-width: 991px) {
+  .side_Menu {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 91%, 93% 100%, 0% 100%);
+  }
+
+}
+
 @media (max-width: 640px) {
   .nav_left_corner {
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 6% 100%, 0% 77%);
   }
   .nav_right_corner {
     clip-path: polygon(0% 0%, 90% 0%, 100% 22%, 100% 100%, 0% 100%);
+  }
+  .side_Menu {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 92%, 88% 100%, 0% 100%);
   }
 }
