--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,26 @@
 @import "tailwindcss";
 * {
-  box-sizing: border-box;
+  box-sizing: border-box; 
+
 }
 .explore_btn {
   clip-path: polygon(0% 0%, 92% 0%, 100% 30%, 100% 100%, 8% 100%, 0% 77%);
+}
+.section_corner_cut{
+  clip-path: polygon(0% 0%, 7% 10%, 100% 10%, 100% 90%, 95% 100%, 0% 100%);
+}
+/* @media (max-width:768px) {
+  .section_corner_cut{
+    clip-path: polygon(0% 0%, 13% 10%, 100% 10%, 100% 92%, 92% 100%, 0% 100%);
+  } 
+}
+@media (max-width:640px) {
+  .section_corner_cut{
+    clip-path: polygon(0% 0%, 15% 10%, 100% 10%, 100% 94%, 90% 100%, 0% 100%);
+  } 
+} */
+@media (max-width:640px) {
+  .section_corner_cut{
+    clip-path: polygon(0% 0%, 7% 10%, 100% 10%, 100% 94%, 95% 100%, 0% 100%);
+  } 
 }
