--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,11 @@
 @import "tailwindcss";
 * {
-  box-sizing: border-box; 
-
+  box-sizing: border-box;
 }
 .explore_btn {
   clip-path: polygon(0% 0%, 92% 0%, 100% 30%, 100% 100%, 8% 100%, 0% 77%);
 }
-.section_corner_cut{
+.section_corner_cut {
   clip-path: polygon(0% 0%, 7% 10%, 100% 10%, 100% 90%, 95% 100%, 0% 100%);
 }
 /* @media (max-width:768px) {
@@ -19,8 +18,26 @@
     clip-path: polygon(0% 0%, 15% 10%, 100% 10%, 100% 94%, 90% 100%, 0% 100%);
   } 
 } */
-@media (max-width:640px) {
-  .section_corner_cut{
+
+.section_corner_cut_top {
+  clip-path: polygon(0% 40%, 8% 100%, 0% 100%);
+}
+
+
+
+.bottomRigthCornerCut {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 91%, 94% 100%, 0% 100%);
+}
+
+
+@media (max-width: 640px) {
+  .section_corner_cut {
     clip-path: polygon(0% 0%, 7% 10%, 100% 10%, 100% 94%, 95% 100%, 0% 100%);
-  } 
+  }
+  .section_corner_cut_top {
+    clip-path: polygon(0% 50%, 12% 100%, 0% 100%);
+  }
+  .bottomRigthCornerCut {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 94%, 92% 100%, 0% 100%);
+  }
 }
