--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,30 +2,36 @@
 * {
   box-sizing: border-box;
 }
+
+
 .explore_btn {
   clip-path: polygon(0% 0%, 92% 0%, 100% 30%, 100% 100%, 8% 100%, 0% 77%);
 }
-.section_corner_cut {
-  clip-path: polygon(0% 0%, 7% 10%, 100% 10%, 100% 90%, 95% 100%, 0% 100%);
-}
 
-.section_corner_cut_top {
-  clip-path: polygon(0% 40%, 8% 100%, 0% 100%);
-}
 
-.bottomRigthCornerCut {
+.section_corner_cut_top_bottom_left {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 8% 100%, 0% 89%);
+}
+.section_corner_cut_bottom_right  {
   clip-path: polygon(0% 0%, 100% 0%, 100% 91%, 94% 100%, 0% 100%);
 }
 
+@media (max-width: 1024px) {
+  .section_corner_cut_top_bottom_left {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 8% 100%, 0% 95%);
+  }
+}
 
 @media (max-width: 640px) {
-  .section_corner_cut {
-    clip-path: polygon(0% 0%, 7% 10%, 100% 10%, 100% 94%, 95% 100%, 0% 100%);
-  }
   .section_corner_cut_top {
     clip-path: polygon(0% 50%, 12% 100%, 0% 100%);
   }
-  .bottomRigthCornerCut {
+  .section_corner_cut_bottom_right {
     clip-path: polygon(0% 0%, 100% 0%, 100% 94%, 92% 100%, 0% 100%);
   }
+  .section_corner_cut_top_bottom_left {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 12% 100%, 0% 97%);
+  }
 }
+
+
