--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+
 @import "tailwindcss";
 * {
   box-sizing: border-box;
@@ -12,9 +13,15 @@
 .section_corner_cut_bottom_right  {
   clip-path: polygon(0% 0%, 100% 0%, 100% 91%, 94% 100%, 0% 100%);
 }
+.section_corner_cut_top_bottom_left {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 8% 100%, 0% 89%);
+}
 @media (max-width: 1024px) {
   .section_corner_cut_bottom_right {
     clip-path: polygon(0% 0%, 100% 0%, 100% 94%, 92% 100%, 0% 100%);
+  }
+  .section_corner_cut_top_bottom_left {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 8% 100%, 0% 95%);
   }
 }
 @media (max-width: 640px) {
@@ -27,7 +34,10 @@
   .btn_corner_cut_left_bottom_right_top {
     clip-path: polygon(0% 0%, 95% 0%, 100% 30%, 100% 100%, 5% 100%, 0% 77%);
   }
-
+  .section_corner_cut_top_bottom_left {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 12% 100%, 0% 97%);
+  }
 }
+
 
 
