--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,29 +12,38 @@
   clip-path: polygon(0% 0%, 100% 0%, 100% 91%, 94% 100%, 0% 100%);
 }
 
-
 .botton_rigth_corner {
   clip-path: polygon(0% 0%, 100% 0%, 100% 92%, 90% 100%, 0% 100%);
 }
 
-
-.section_corner_cut_top_left{
+.section_corner_cut_top_left {
   clip-path: polygon(0% 0%, 0% 100%, 100% 100%);
 }
 
-
+.idea_section_inside_div_cut {
+  clip-path: polygon(5% 0%, 100% 0%, 100% 90%, 95% 100%, 0% 100%, 0% 10%);
+  
+}
+@media (min-width:1024px) {
+  .idea_section_right_bottom_corner_cut {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 91%, 94% 100%, 0% 100%);
+    
+  }
+}
 
 @media (max-width: 1024px) {
   .section_corner_cut_bottom_right {
     clip-path: polygon(0% 0%, 100% 0%, 100% 94%, 92% 100%, 0% 100%);
   }
-  .section_corner_cut_top_left{
+  .section_corner_cut_top_left {
     height: 85px;
     top: -85px;
   }
-
+  .idea_section_inside_div_cut {
+    clip-path: polygon(10% 0%, 100% 0%, 100% 90%, 90% 100%, 0% 100%, 0% 10%);
+    
+  }
 }
-
 
 @media (max-width: 640px) {
   .section_corner_cut_bottom_right {
@@ -46,9 +55,8 @@
   .btn_corner_cut_left_bottom_right_top {
     clip-path: polygon(0% 0%, 95% 0%, 100% 30%, 100% 100%, 5% 100%, 0% 77%);
   }
-  .section_corner_cut_top_left{
+  .section_corner_cut_top_left {
     height: 70px;
     top: -70px;
   }
-
 }
