--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
 }
 
 .botton_rigth_corner {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 92%, 90% 100%, 0% 100%);
+  clip-path: polygon(10% 0%, 100% 0%, 100% 90%, 90% 100%, 0% 100%, 0% 10%);
 }
 
 .section_corner_cut_top_left {
@@ -22,12 +22,10 @@
 
 .idea_section_inside_div_cut {
   clip-path: polygon(5% 0%, 100% 0%, 100% 90%, 95% 100%, 0% 100%, 0% 10%);
-  
 }
-@media (min-width:1024px) {
+@media (min-width: 1024px) {
   .idea_section_right_bottom_corner_cut {
     clip-path: polygon(0% 0%, 100% 0%, 100% 91%, 94% 100%, 0% 100%);
-    
   }
 }
 
@@ -41,7 +39,6 @@
   }
   .idea_section_inside_div_cut {
     clip-path: polygon(10% 0%, 100% 0%, 100% 90%, 90% 100%, 0% 100%, 0% 10%);
-    
   }
 }
 
